# SixTrack

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  LICENCE.md  README.md  addtag.sh  buildLibraries.sh  buildPythia.sh  cmake_six  defaultBuild.sh  fortran_support.cmake  mktag
SixTrack/: #sixtrack.s#  .gitignore  .test  CMakeLists.txt  FileRead.s90  Horner.s90  Interface.s90  LICENSE  Makefile  Makefile.boinc  Makefile.boinc.template  Makefile.template  Makefile_makesix  Makefile_makesix.boinc.mac.template  Makefile_makesix.boinc.template  Makefile_makesix.template  README  SixTrack  SympIntegrator.s90  aperture.f90  aperture.s90  astuce  astuce.f  bdex.f90  bdex.s90  bdex_echo.py  beam6d_fox.f90  beamgas.f90  beamgas.s90  boinc_api_fortran.cpp  boinc_zipitall.cpp  bouncy_castle.f90  bouncy_castle.s90  buildLibraries.sh  buildallversions_makefile.sh  buildallversions_makesix.sh  cern_boinc_api_fortran.cpp  cheby.s90  checkpoint_restart.f90  close.f90  (+123 more)
SixTrack/FlukaIO/: CMakeLists.txt  ComponentMakefile  Makefile  README
SixTrack/SixTrack_4530_cernlib_crlibm_gfortran_O4/: Makefile  dabnew.s  lielib.ast  lielib.f  link_intel.bat  make_windows  make_windows.template  myboinc.f  sixtrack.map  sixve.ast  sixve.f  sixvefox.f  track.f
SixTrack/SixTrack_4530_crlibm_fast_gfortran_tilt_tracking_O3/: astuce  beamgas.ast  beamgas.astuce_log  dabnew.s  dabnews.astuce_log  dabnews.f  dabnewsn.f  dafor  lielib.astuce_log  lielib.f  sed_expr_1  sed_expr_2  sixtrack  sixve.ast  sixve.astuce_log  sixve.f  sixvefox.ast  sixvefox.astuce_log  sixvefox.f  sixvefoxn.f  sixven.f  temp_sed  track.ast  track.astuce_log  track.dafor_log  track.f  trackn.f
SixTrack/SixTrack_4535_cernlib_crlibm_gfortran_O4/: Makefile_makesix  beamgas.ast  beamgas.f90  boinc_api_fortran.cpp  boinc_api_fortran.cpp.windows  boinc_zipitall.cpp  compile_fortran.bat  lielib.ast  lielib.s  link_intel.bat  link_intel.bat.template  make_makesix_windows  plato_seq.ast  plato_seq.f  plato_seq.s  sixtrack.map  sixtrack.s  sixve.ast  sixve.f  sixvefox.f  track.ast  track.f
SixTrack/ast_mask/: FileRead.ast  Horner.ast  Interface.ast  SympIntegrator.ast  aperture.ast  bdex.ast  beamgas.ast  bouncy_castle.ast  cheby.ast  close.ast  collimation.ast  cor_glo.ast  cor_ord.ast  crcoall.ast  dabnew.ast  dabnews.ast  datamods.ast  dump.ast  dynk.ast  elens.ast  end_sixtrack.ast  eric.ast  error.ast  file_units.ast  floatprecision.ast  fluka.ast  fma.ast  hdf5.ast  hdf5_sixtrack.ast  hions.ast  lielib.ast  mainarrays.ast  mod_alloc.ast  parpro_scale.ast  physical_constants.ast  plato_seq.ast  postprocessing.ast  ranecu.ast  root_output.ast  scatter.ast  (+10 more)
SixTrack/beauty/: astuce_namelength.py  beauty.awk  check_astuce_ifs.awk  count.awk  doevery  doflush  dotrig  junk.awk  ridcomm  sedflags  sedmain  sedprint  sedsemi  sedsyn  sedtrig  sedw6  splitFortranFile.py  supercount.py
SixTrack/cmake_modules/: FindFFTW.cmake
SixTrack/crlibm/: CMakeLists.txt  Makefile  Makefile.bat  Makefile.bat.template  Makefile.template  Makefile_makesix.template  acos_rn.f  asin_rn.f  crlibm.h  crlibm_private.h  disable_xp.c  dtoa_c.c  enable_xp.c  exp.c  infnani.f  log.c  log.h  log10.c  log_fast.c  log_fast.h  round_near.c  round_near.c.orig
SixTrack/g4collimat/: CollimationEventAction.cpp  CollimationGeometry.cpp  CollimationGeometry.h  CollimationParticleGun.h  CollimationTrackingAction.cpp  G4Interface.cpp
SixTrack/include/: beam22.f90  beam6d.f90  beama4o.f90  beamco.f90  beamcof.f90  beamr3o.f90  beams1.f90  beams21.f90  beamwzf2.f90  bnlin.f90  bnlout.f90  bnltwiss.f90  crabkick.f90  dainicom.f90  dalin2.f90  dalin6.f90  kicka02h.f90  kicka03h.f90  kicka03v.f90  kicka05h.f90  kicka06v.f90  kicka10v.f90  kickaso1.f90  kickelens.f90  kickfdpe.f90  kickfso1.f90  kicklso1.f90  kicklxxv.f90  kickq03v.f90  kickq05v.f90  kickq06v.f90  kickq07h.f90  kicku01h.f90  kickudpe.f90  kickvso1.f90  kickvxxh.f90  kispa10h.f90  mul4v06.f90  mul4v07.f90  mul6v01.f90  (+23 more)
SixTrack/merlinscatter/: DiffractiveScatter.cpp  DiffractiveScatter.h  ElasticScatter.cpp  ElasticScatter.h  HelperFunctions.cpp  HelperFunctions.h  LandauEnergyLoss.cpp  LandauEnergyLoss.h  makefile  merlinscatter_interface.cpp  testclass.cpp  testclass.h
SixTrack/naff/: NAFF.h  consts.h  minima.hpp  naff_interface.cpp  signal.h  spline_interpolation.cc  spline_interpolation.h  windows.cc
SixTrack/pytools/: SixRipken.py  fix_cdblocks.py  read_fortbin.py  rippconverter.py
SixTrack/root_output/: AcceleratorOutput_root.cpp  AcceleratorOutput_root.h  ApertureCheck_root.cpp  ApertureCheck_root.h  CMakeLists.txt  Collimation_root.cpp  Collimation_root.h  Optics_root.cpp  Optics_root.h  RunTime_root.cpp  RunTime_root.h  SixTrack_root.cpp  SixTrack_root.h
SixTrack/roundctl/: CMakeLists.txt  Makefile_makesix.template  disable_xp.c  dtoa_c.c  dtoaf.c  enable_xp.c  fpu_control.h  round_near.c
SixTrack/track/: beam21.f90  beama4.f90  kicka01v.f90  kicka06h.f90  kickadpe.f90  kickq01h.f90  kickq10h.f90  kickuxxv.f90  multl07a.f90
SixTrack/windows/: Makefile.bat  addition_scs.c  asin_rn.f  atan2_rn.f  csh_fast.c  log10.h  mkwindows  zero_scs.c
SixTrack_noastuce/: CMakeLists.txt
SixTrack_noastuce/cmake/: common_defs.cmake  precomp.sh  sixtrack_defs.cmake
SixTrack_noastuce/dabnew/: CMakeLists.txt  dabnew.F  dabnew.h.in  dabnews.F
SixTrack_noastuce/dafor/: CMakeLists.txt  dafor.f
SixTrack_noastuce/lielib/: CMakeLists.txt  lielib.F  lielib.h.in
SixTrack_noastuce/sixtrack/: CMakeLists.txt  beamgas.F90  sixda.F  sixsc.F  sixscfox.F  sixtrack.h.in  sixve.F  sixvefox.F  track.F
source/FlukaIO/: CMakeLists.txt  ComponentMakefile  Makefile
source/g4collimation/: CMakeLists.txt  CollimationEMD.cpp  CollimationEMD.h  CollimationEventAction.cpp  CollimationEventAction.h  CollimationGeometry.cpp  CollimationGeometry.h  CollimationJawHit.cpp  CollimationJawHit.h  CollimationJawSD.cpp  CollimationJawSD.h  CollimationMaterials.cpp  CollimationParticleGun.cpp  CollimationParticleGun.h  CollimationStackingAction.cpp  G4Interface.cpp  (+8 more)
(+2493 files in other folders)
